@startuml

title __COMPANY's Class Diagram__\n

  namespace com.company {
    abstract class com.company.Conta {
        - nome : String
        - numero : int
        - saldo : double
        + depositar()
        + getNome()
        + getNumero()
        + getSaldo()
        + sacar()
        + setNome()
        + setNumero()
        + setSaldo()
    }
  }
  

  namespace com.company {
    class com.company.Corrente {
        - limite : double
        + getLimite()
        + sacar()
        + setLimite()
    }
  }
  

  namespace com.company {
    class com.company.GerenciarContass {
        {static} + main()
    }
  }
  

  namespace com.company {
    class com.company.GerenciarPatrimonioBanco {
        - totalPatrimonio : double
        + adicionarConta()
        + getTotalPatrimonio()
    }
  }
  

  namespace com.company {
    class com.company.Poupanca {
        - diaAniversario : int
        + getDiaAniversario()
        + setDiaAniversario()
    }
  }
  

  com.company.Corrente -up-|> com.company.Conta
  com.company.Poupanca -up-|> com.company.Conta


right footer


PlantUML diagram generated by SketchIt! (https://bitbucket.org/pmesmeur/sketch.it)
For more information about this tool, please contact philippe.mesmeur@gmail.com
endfooter

@enduml
